# clean-architecture-saas

./: .gitignore  LICENSE.txt  README.md
python/: .env.example  .flake8  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.ci.yml  docker-compose.yml  mypy.ini  openapi.json  openapi.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.lock.txt  requirements.txt
python/migrations/: 001_consolidated_schema.down.sql  001_consolidated_schema.up.sql
python/scripts/: compile_src.py
python/src/: __init__.py
python/src/app/: __init__.py  composition.py  config.py  db.py  exceptions.py  logging_config.py  main.py  metrics.py  setup_db.py  wiring.py
python/src/app/domain/: __init__.py  audit.py  auth.py  feature.py  permission.py  tenant.py  user.py
python/src/app/infrastructure/: __init__.py
python/src/app/middleware/: current_user.py  https_redirect.py  metrics_middleware.py  security_headers.py
python/src/app/ports/: __init__.py  audit.py  cache.py  email.py  repositories.py
python/src/app/routers/: __init__.py  audit.py  auth.py  feature_flags.py  health.py  permissions.py  protected.py  tenants.py  users.py
python/src/app/schemas/: __init__.py  audit.py  auth.py  feature_flag.py  permission.py  tenant.py  user.py
python/tests/: conftest.py
python/tests/fixtures/: __init__.py  app_factory.py
python/tests/integration/: test_audit_logs_integration.py  test_auth_integration.py  test_delete_sessions.py  test_e2e.py  test_email_verification_integration.py  test_feature_flags_integration.py  test_health_endpoints.py  test_permissions_integration.py  test_rate_limiter.py  test_register_sends_email.py  test_require_permission.py  test_smoke.py  test_tenant_get_update.py  test_tenant_lifecycle_integration.py  test_tenant_middleware.py  test_tenants_create_user.py  test_user_management_integration.py  test_users_end_to_end.py
python/tests/unit/: test_audit_gating.py  test_auth_service.py  test_email_tokens.py  test_feature_evaluator.py  test_feature_evaluator_extra.py  test_feature_service.py  test_metrics.py  test_refresh.py  test_sessions.py  test_startup_clients.py  test_tenant_resolution.py  test_tenant_service.py  test_user_service.py  test_users_router_unit.py  test_utils_user_to_response.py
(+142 files in other folders)
