[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-architecture-saas-python"
version = "1.0.0"
description = "Clean Architecture SaaS template in Python (FastAPI + SQLAlchemy async)"
license = { text = "MIT" }
requires-python = ">=3.13"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"src/app/composition.py" = ["E402"]  # Module needs to manipulate environment before imports
"src/app/main.py" = ["E402"]  # Module needs to defer imports until after config
"tests/conftest.py" = ["E402"]  # Test config needs to set environment before app imports
"src/app/deps/auth.py" = ["B904"]  # Authentication errors intentionally don't chain for security
"src/app/deps/injection.py" = ["B904"]  # Authentication errors intentionally don't chain for security
"src/app/routers/auth.py" = ["B904"]  # Authentication errors intentionally don't chain for security
"src/app/routers/tenants.py" = ["B904"]  # Business logic errors converted to HTTP exceptions
"src/app/routers/users.py" = ["B904"]  # Business logic errors converted to HTTP exceptions
"src/app/services/session_service.py" = ["B904"]  # Business logic errors converted to domain exceptions

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

